# pytorch-module-monitor

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
examples/: cifar-10.ipynb  metrics.ipynb  reference-model.ipynb  refined-coordinate-check.ipynb
src/pytorch_module_monitor/: __init__.py  attention.py  hooks.py  metrics.py  monitor.py  refined_coordinate_check.py  storage.py
src/torch_module_monitor/: __init__.py  attention.py  hooks.py  monitor.py  storage.py
tests/: TEST_PLAN.md  conftest.py  test_hooks.py  test_monitor_basic.py  test_refined_coordinate_check.py
